--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - name: Install required Debian packages
+      run: sudo apt-get -qq install xmlsec1
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -23,3 +26,5 @@ jobs:
 
     - name: Test with tox
       run: tox -e py,combine
+      env:
+          TRIAL_FLAGS: "--jobs=2"
