--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ jobs:
         include:
           - python-version: '3.9'
             toxenv: 'py-noextras,combine'
+            foo: 'bar'
 
     steps:
-
     - uses: actions/checkout@v2
 
     - name: Install required Debian packages
