--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Test with tox
       run: tox
       env:
-          TRIAL_FLAGS: "--jobs=2"
-          TOXENV: ${{ matrix.toxenv }}
+        TRIAL_FLAGS: "--jobs=2"
+        TOXENV: ${{ matrix.toxenv }}
 
   trial-olddeps:
     runs-on: ubuntu-latest
@@ -44,4 +44,5 @@ jobs:
       with:
         workdir: /github/workspace
         entrypoint: .buildkite/scripts/test_old_deps.sh
-        env: "TRIAL_FLAGS:--jobs=2"
+      env:
+        TRIAL_FLAGS: "--jobs=2"
