--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -180,8 +180,8 @@ jobs:
 #          || true
 #
   sytest:
-    if: ${{ !failure() }}
-    needs: linting-done
+#    if: ${{ !failure() }}
+#    needs: linting-done
     runs-on: ubuntu-latest
     container:
       image: matrixdotorg/sytest-synapse:${{ matrix.sytest-tag }}
