--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -225,7 +225,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Prepare test blacklist
         run: cat sytest-blacklist .buildkite/worker-blacklist > synapse-blacklist-with-workers
-      - run: apt-get update && apt-get install -qq curl unzip
+      - run: apt-get update && apt-get install -qq curl unzip openssh-server
+      - run: /etc/init.d/ssh start
       - uses: joshlarsen/ssh-tunnel-action@main
         with:
           timeout: 3m
