--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -183,30 +183,29 @@ jobs:
 #    if: ${{ !failure() }}
 #    needs: linting-done
     runs-on: ubuntu-latest
-#    container:
-#      image: matrixdotorg/sytest-synapse:${{ matrix.sytest-tag }}
-#      volumes:
-#        - ${{ github.workspace }}:/src
-#        - ./logs:/logs
-#      env:
-#        BUILDKITE_BRANCH: ${{ github.head_ref }}
+    container:
+      image: matrixdotorg/sytest-synapse:${{ matrix.sytest-tag }}
+      volumes:
+        - ${{ github.workspace }}:/src
+      env:
+        BUILDKITE_BRANCH: ${{ github.head_ref }}
 #        POSTGRES: ${{ matrix.postgres && 1}}
 #        MULTI_POSTGRES: ${{ (matrix.postgres == 'multi-postgres') && 1}}
 #        WORKERS: ${{ matrix.workers && 1 }}
 #        REDIS: ${{ matrix.redis && 1 }}
 #        BLACKLIST: ${{ matrix.workers && 'synapse-blacklist-with-workers' }}
 #
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        include:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
 #          - sytest-tag: py35
 #
 #          - sytest-tag: py35
 #            postgres: postgres
 #
-#          - sytest-tag: py38
-#            postgres: postgres
+          - sytest-tag: py38
+            postgres: postgres
 #
 #          - sytest-tag: py35
 #            postgres: multi-postgres
@@ -230,24 +229,24 @@ jobs:
           timeout: 1h
           ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
           ngrok_token: ${{ secrets.NGROK_TOKEN }}
-#      - name: Run SyTest
-#        run: /bootstrap.sh synapse
-#        working-directory: /src
+      - name: Run SyTest
+        run: /bootstrap.sh synapse
+        working-directory: /src
 #      - uses: joshlarsen/ssh-tunnel-action@main
 #        with:
 #          timeout: 1h
 #          ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
 #          ngrok_token: ${{ secrets.NGROK_TOKEN }}
-#      - name: Dump logs
-#        # Note: Dumps to workflow logs instead of using actions/upload-artifact
-#        #       This keeps logs colocated with failing jobs
-#        #       It also ignores find's exit code; this is a best effort affair
-#        run: >-
-#          find /logs -name '*.log*' -o -name 'results.tap'
-#          -exec echo "::group::{}" \;
-#          -exec cat {} \;
-#          -exec echo "::endgroup::" \;
-#          || true
+      - name: Dump logs
+        # Note: Dumps to workflow logs instead of using actions/upload-artifact
+        #       This keeps logs colocated with failing jobs
+        #       It also ignores find's exit code; this is a best effort affair
+        run: >-
+          find /logs '(' -name '*.log*' -o -name 'results.tap' ')'
+          -exec echo "::group::{}" \;
+          -exec cat {} \;
+          -exec echo "::endgroup::" \;
+          || true
 #
 #  portdb:
 #    if: ${{ !failure() }} # Allow previous steps to be skipped, but not fail
