--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -224,11 +224,11 @@ jobs:
       - uses: actions/checkout@v2
 #      - name: Prepare test blacklist
 #        run: cat sytest-blacklist .buildkite/worker-blacklist > synapse-blacklist-with-workers
-      - uses: joshlarsen/ssh-tunnel-action@main
-        with:
-          timeout: 1h
-          ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
-          ngrok_token: ${{ secrets.NGROK_TOKEN }}
+#      - uses: joshlarsen/ssh-tunnel-action@main
+#        with:
+#          timeout: 1h
+#          ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
+#          ngrok_token: ${{ secrets.NGROK_TOKEN }}
       - name: Run SyTest
         run: /bootstrap.sh synapse
         working-directory: /src
